--- a/README
+++ b/README
@@ -4,7 +4,7 @@ EMU86 is yet another 8086/8088/80186/80188 emulator.
 
 That old 16-bit processor architecture is still used today in some devices
 (SBC, MCU, SoC, FPGA, etc) that reuse the huge hardware and code base from
-the legacy PC/XT/AT platform.
+the legacy and popular PC/XT/AT platform to build embedded systems.
 
 This emulator is intended to help the related embedded software development,
 at the stage of testing / debugging the code on the development system before
